<resources>
    <string name="app_name">智取华容道</string>
    <string name="back">返回</string>
    <string name="describe">华容道（英语：Klotski，来自波兰文的klocki，意为木块）是一种滑块类游戏，由放在方形盘中的10块方片拼成，目标是在只滑动方块而不从棋盘中拿走的情况下，将最大的一块移到底部出口。流行于中国的华容道是由英国人John Harold Fleming在1932年所发明，然后在中国本土化加上三国背景。国内国外都有一些华容道的爱好者研究者。\n\n
                            </string>
    <string name="huarongdao_text">华容道</string>
    <string name="start_text">开始游戏</string>
    <string name="about_text">关于</string>
    <string name="levelone_text">第一关：横刀立马</string>
    <string name="leveltwo_text">第二关：横竖皆将</string>
    <string name="levelthree_text">第三关：守口如瓶(一)</string>
    <string name="levelfour_text">第四关：守口如瓶(二)</string>
    <string name="levelfive_text">第五关：层层设防(一)</string>
    <string name="exit_text">出口</string>
    <string name="levelsix_text">第六关：层层设防(二)</string>
    <string name="levelseven_text">第七关：三军联防</string>
    <string name="leveleight_text">第八关：堵塞要道</string>
    <string name="back_character"><![CDATA[<]]></string>
    <string name="finish_text">完成</string>
    <string name="reset_text">重置</string>
</resources>
