<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background_level"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/map"
    tools:context=".LevelActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="88dp"
        android:background="@color/green_sea"
        android:text="@string/levelone_text"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_size"
        android:onClick="gotolevel1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/leveltwo_text"
        android:textSize="@dimen/button_text_size"
        android:background="@color/green_sea"
        android:textColor="@color/white"
        android:onClick="gotolevel2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button3"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/levelthree_text"
        android:textSize="@dimen/button_text_size"
        android:background="@color/green_sea"
        android:textColor="@color/white"
        android:onClick="gotolevel3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/levelfour_text"
        android:textSize="@dimen/button_text_size"
        android:background="@color/green_sea"
        android:textColor="@color/white"
        android:onClick="gotolevel4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/levelfive_text"
        android:textSize="@dimen/button_text_size"
        android:background="@color/green_sea"
        android:textColor="@color/white"
        android:onClick="gotolevel5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button6"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/levelsix_text"
        android:textSize="@dimen/button_text_size"
        android:background="@color/green_sea"
        android:textColor="@color/white"
        android:onClick="gotolevel6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button7"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/levelseven_text"
        android:textSize="@dimen/button_text_size"
        android:background="@color/green_sea"
        android:textColor="@color/white"
        android:onClick="gotolevel7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button8"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/leveleight_text"
        android:textSize="@dimen/button_text_size"
        android:background="@color/green_sea"
        android:textColor="@color/white"
        android:onClick="gotolevel8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/back_btn"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/nephritis"
        android:onClick="exit"
        android:text="@string/back_character"
        android:textSize="@dimen/button_text_size"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>