<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".Level5Activity">

    <com.example.huarongdao.Klotski
        android:id="@+id/main_klotski"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:blockDrawable1x1="@mipmap/small"
        app:blockDrawable1x2a="@mipmap/medium_ver"
        app:blockDrawable1x2b="@mipmap/medium_ver"
        app:blockDrawable2x1a="@mipmap/medium_hor"
        app:blockDrawable2x1b="@mipmap/medium_hor"
        app:blockDrawable2x1c="@mipmap/medium_hor"
        app:blockDrawable2x2="@mipmap/large"
        app:blockSpacing="3dp" />

    <!--设置返回按钮的相对位置-->
    <Button
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:onClick="back"
        android:textColor="@color/white"
        android:background="@color/green_sea"
        android:text="@string/back" />

    <!--设置下一关按钮的相对位置-->
    <Button
        android:id="@+id/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:onClick="reset"
        android:textColor="@color/white"
        android:background="@color/green_sea"
        android:text="@string/reset_text" />

    <!--设置关卡名区域的相对位置-->
    <TextView
        android:id="@+id/level_name"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/next_btn"
        android:layout_toLeftOf="@+id/next_btn"
        android:layout_toEndOf="@+id/back_btn"
        android:layout_toRightOf="@+id/back_btn"
        android:gravity="center"
        android:text="@string/exit_text"
        android:textSize="@dimen/button_text_size"
        android:maxLines="1"
        android:textStyle="bold" />
</RelativeLayout>
